; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_timer.c_timer_isr_register.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_timer.c_timer_isr_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TIMER_GROUP_MAX = common dso_local global i32 0, align 4
@TIMER_GROUP_NUM_ERROR = common dso_local global i32 0, align 4
@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4
@TIMER_MAX = common dso_local global i64 0, align 8
@TIMER_NUM_ERROR = common dso_local global i32 0, align 4
@TIMER_PARAM_ADDR_ERROR = common dso_local global i32 0, align 4
@ESP_INTR_FLAG_EDGE = common dso_local global i32 0, align 4
@ETS_TG0_T0_LEVEL_INTR_SOURCE = common dso_local global i64 0, align 8
@ETS_TG0_T0_EDGE_INTR_SOURCE = common dso_local global i64 0, align 8
@ETS_TG1_T0_LEVEL_INTR_SOURCE = common dso_local global i64 0, align 8
@ETS_TG1_T0_EDGE_INTR_SOURCE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @timer_isr_register(i32 %0, i64 %1, void (i8*)* %2, i8* %3, i32 %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca void (i8*)*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i64 %1, i64* %8, align 8
  store void (i8*)* %2, void (i8*)** %9, align 8
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  store i32* %5, i32** %12, align 8
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* @TIMER_GROUP_MAX, align 4
  %18 = icmp slt i32 %16, %17
  %19 = zext i1 %18 to i32
  %20 = load i32, i32* @TIMER_GROUP_NUM_ERROR, align 4
  %21 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  %22 = call i32 @TIMER_CHECK(i32 %19, i32 %20, i32 %21)
  %23 = load i64, i64* %8, align 8
  %24 = load i64, i64* @TIMER_MAX, align 8
  %25 = icmp slt i64 %23, %24
  %26 = zext i1 %25 to i32
  %27 = load i32, i32* @TIMER_NUM_ERROR, align 4
  %28 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  %29 = call i32 @TIMER_CHECK(i32 %26, i32 %27, i32 %28)
  %30 = load void (i8*)*, void (i8*)** %9, align 8
  %31 = icmp ne void (i8*)* %30, null
  %32 = zext i1 %31 to i32
  %33 = load i32, i32* @TIMER_PARAM_ADDR_ERROR, align 4
  %34 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  %35 = call i32 @TIMER_CHECK(i32 %32, i32 %33, i32 %34)
  store i32 0, i32* %13, align 4
  store i32 0, i32* %14, align 4
  store i32 0, i32* %15, align 4
  %36 = load i32, i32* %7, align 4
  switch i32 %36, label %38 [
    i32 129, label %37
    i32 128, label %58
  ]

37:                                               ; preds = %6
  br label %38

38:                                               ; preds = %6, %37
  %39 = load i32, i32* %11, align 4
  %40 = load i32, i32* @ESP_INTR_FLAG_EDGE, align 4
  %41 = and i32 %39, %40
  %42 = icmp eq i32 %41, 0
  br i1 %42, label %43, label %48

43:                                               ; preds = %38
  %44 = load i64, i64* @ETS_TG0_T0_LEVEL_INTR_SOURCE, align 8
  %45 = load i64, i64* %8, align 8
  %46 = add nsw i64 %44, %45
  %47 = trunc i64 %46 to i32
  store i32 %47, i32* %13, align 4
  br label %53

48:                                               ; preds = %38
  %49 = load i64, i64* @ETS_TG0_T0_EDGE_INTR_SOURCE, align 8
  %50 = load i64, i64* %8, align 8
  %51 = add nsw i64 %49, %50
  %52 = trunc i64 %51 to i32
  store i32 %52, i32* %13, align 4
  br label %53

53:                                               ; preds = %48, %43
  %54 = call i32 @TIMG_INT_ST_TIMERS_REG(i32 0)
  store i32 %54, i32* %14, align 4
  %55 = load i64, i64* %8, align 8
  %56 = trunc i64 %55 to i32
  %57 = shl i32 1, %56
  store i32 %57, i32* %15, align 4
  br label %78

58:                                               ; preds = %6
  %59 = load i32, i32* %11, align 4
  %60 = load i32, i32* @ESP_INTR_FLAG_EDGE, align 4
  %61 = and i32 %59, %60
  %62 = icmp eq i32 %61, 0
  br i1 %62, label %63, label %68

63:                                               ; preds = %58
  %64 = load i64, i64* @ETS_TG1_T0_LEVEL_INTR_SOURCE, align 8
  %65 = load i64, i64* %8, align 8
  %66 = add nsw i64 %64, %65
  %67 = trunc i64 %66 to i32
  store i32 %67, i32* %13, align 4
  br label %73

68:                                               ; preds = %58
  %69 = load i64, i64* @ETS_TG1_T0_EDGE_INTR_SOURCE, align 8
  %70 = load i64, i64* %8, align 8
  %71 = add nsw i64 %69, %70
  %72 = trunc i64 %71 to i32
  store i32 %72, i32* %13, align 4
  br label %73

73:                                               ; preds = %68, %63
  %74 = call i32 @TIMG_INT_ST_TIMERS_REG(i32 1)
  store i32 %74, i32* %14, align 4
  %75 = load i64, i64* %8, align 8
  %76 = trunc i64 %75 to i32
  %77 = shl i32 1, %76
  store i32 %77, i32* %15, align 4
  br label %78

78:                                               ; preds = %73, %53
  %79 = load i32, i32* %13, align 4
  %80 = load i32, i32* %11, align 4
  %81 = load i32, i32* %14, align 4
  %82 = load i32, i32* %15, align 4
  %83 = load void (i8*)*, void (i8*)** %9, align 8
  %84 = load i8*, i8** %10, align 8
  %85 = load i32*, i32** %12, align 8
  %86 = call i32 @esp_intr_alloc_intrstatus(i32 %79, i32 %80, i32 %81, i32 %82, void (i8*)* %83, i8* %84, i32* %85)
  ret i32 %86
}

declare dso_local i32 @TIMER_CHECK(i32, i32, i32) #1

declare dso_local i32 @TIMG_INT_ST_TIMERS_REG(i32) #1

declare dso_local i32 @esp_intr_alloc_intrstatus(i32, i32, i32, i32, void (i8*)*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
